--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
     username: postgres
-    password: postgres
+    password: admin
   jpa:
     properties:
       hibernate:
